[TASK] Restructure the header. The two divs will create the separation between logo and navigation.
The logo needs to be wrapped in a link, as it should be clickable.

H1 instead of H2 for the logo. Hierarchical order must be correct. This way we can ensure there is always a H1 on the page.

Naming for classes should explain what it is about. Changed the classname from spin to logo.

Restructure the navigation. Without links (a href) the navigation is not clickable. Always use native elements first for interactive items.

The Hamburger Menu needs to be clickable too, but it does not cause the browser to reload. It force the browser to perform an actions. Thats why a button is the right choice here.

SVGs are code. Its better to implement them directly as code, instead of using them in an image tag.

CSS will be applied later.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,32 @@
     <body>
         <header>
             <div>
-                <h2 class="spin">Sunnyside</h2>
-                <img class="icon" src="images/icon-hamburger.svg" alt="" />
-                <nav class="desktop-nav">
+                <a href="/" class="logo">
+                    <h1>Sunnyside</h1>
+                </a>
+            </div>
+            <div>
+                <nav class="navigation">
                     <ul>
-                        <li>About</li>
-                        <li>Services</li>
-                        <li>Projects</li>
-                        <li class="selected">Contact</li>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Services</a>
+                        </li>
+                        <li>
+                            <a href="#">Projects</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
                     </ul>
                 </nav>
+                <button>
+                    <svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd" />
+                    </svg>
+                </button>
             </div>
         </header>
 
