--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <!-- displays site properly based on user's device -->
 
         <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-        <link rel="stylesheet" href="styles.css" type="text/css" media="all" />
+        <link rel="stylesheet" href="css/normalize.css" type="text/css" media="all" />
+        <link rel="stylesheet" href="css/styles.css" type="text/css" media="all" />
         <title>Frontend Mentor | Sunnyside agency landing page</title>
 
         <!-- Feel free to remove these styles or customise in your own stylesheet 👍
