[TASK] Restructure sections 1-4.
Try to reuse things.

Do not use IDs in your css except you need them for JS.

--- a/index.html
+++ b/index.html
@@ -45,64 +45,88 @@
             </div>
         </header>
 
-        <section id="intro">
-            <h1>WE ARE<br />CREATIVES</h1>
-            <img src="images/icon-arrow-down.svg" alt="" />
+        <section class="stage">
+            <h2>WE ARE CREATIVES</h2>
+            <div class="arrow-down">
+                <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg">
+                    <g
+                        stroke="#FFF"
+                        stroke-width="6"
+                        fill="none"
+                        fill-rule="evenodd"
+                        stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path d="M18 3v100M3 95.484l15 15 15-15" />
+                    </g>
+                </svg>
+            </div>
         </section>
 
-        <section class="transform brand">
-            <img src="images/mobile/image-transform.jpg" alt="" />
-
-            <article>
-                <div class="wrapper">
-                    <h2 class="transform-h2">Transform your brand</h2>
-
-                    <p class="transform-p">
-                        We are a full-service creative agency specializing in helping brands grow fast. Engage your
-                        clients through compelling visuals that do most of the marketing for you.
-                    </p>
-
-                    <a href="#" class="transform-a" id="transform-a">Learn more</a>
+        <section class="grid">
+            <div class="grid-item">
+                <div class="grid-item-image">
+                    <img src="images/mobile/image-transform.jpg" alt="" />
                 </div>
-            </article>
+            </div>
+            <div class="grid-item">
+                <h2>Transform your brand</h2>
+
+                <p>
+                    We are a full-service creative agency specializing in helping brands grow fast. Engage your clients
+                    through compelling visuals that do most of the marketing for you.
+                </p>
+
+                <a href="#">Learn more</a>
+            </div>
         </section>
 
-        <section class="transform stand-out">
-            <img src="images/mobile/image-stand-out.jpg" alt="" />
-            <article>
-                <div class="wrapper">
-                    <h2 class="transform-h2">Stand out to the right audience</h2>
+        <section class="grid">
+            <div class="grid-item">
+                <h2>Stand out to the right audience</h2>
 
-                    <p class="transform-p">
-                        Using a collaborative formula of designers, researchers, photographers, videographers, and
-                        copywriters, we’ll build and extend your brand in digital places.
-                    </p>
-                    <a href="#" class="transform-a" id="stand-out-a">Learn more</a>
+                <p>
+                    Using a collaborative formula of designers, researchers, photographers, videographers, and
+                    copywriters, we’ll build and extend your brand in digital places.
+                </p>
+                <a href="#">Learn more</a>
+            </div>
+            <div class="grid-item">
+                <div class="grid-item-image">
+                    <img src="images/mobile/image-transform.jpg" alt="" />
                 </div>
-            </article>
+            </div>
         </section>
 
-        <div class="desktop-container">
-            <section class="services graphic-design">
-                <div>
-                    <h3>Graphic design</h3>
-                    <p class="services-p">
-                        Great design makes you memorable. We deliver artwork that underscores your brand message and
-                        captures potential clients’ attention.
-                    </p>
+        <section class="grid">
+            <div class="grid-item">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/mobile/image-transform.jpg" alt="" />
+                    </div>
+                    <div class="card-content">
+                        <h3>Graphic design</h3>
+                        <p>
+                            Great design makes you memorable. We deliver artwork that underscores your brand message and
+                            captures potential clients’ attention.
+                        </p>
+                    </div>
                 </div>
-            </section>
-
-            <section class="services photography">
-                <div>
-                    <h3>Photography</h3>
-                    <p class="services-p">
-                        Increase your credibility by getting the most stunning, high-quality photos that improve your
-                        business image.
-                    </p>
+            </div>
+            <div class="grid-item">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/mobile/image-transform.jpg" alt="" />
+                    </div>
+                    <div class="card-content">
+                        <h3>Photography</h3>
+                        <p>
+                            Increase your credibility by getting the most stunning, high-quality photos that improve
+                            your business image.
+                        </p>
+                    </div>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
 
         <section class="testimonials">
             <h4 class="testimonial-heading">Client Testimonials</h4>
